# Zero2Prod

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  build.rs  rust-toolchain.toml  zero2prod.yml
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: main-ci.yaml  main-pull-request-ci.yaml  task-build-nightly.yaml  task-deps-cargo.yaml  task-lint-cargo.yaml  task-test-cargo.yaml
app/: Cargo.toml  build.rs
app/src/: configuration.rs  health.rs  lib.rs  main.rs
app/src/routes/: health_check.rs
app/tests/: configuration.rs  health_check.rs  subscriptions.rs
app/tests/common/: mod.rs
logs/: Cargo.toml
logs/src/: consummer.rs  lib.rs
serializer/: Cargo.toml
serializer/src/: lib.rs
src/: configuration.rs  health.rs  lib.rs  main.rs
src/logs/: consummer.rs
src/routes/: subscriptions.rs
src/serialize/: mod.rs
tests/: configuration.rs  health_check.rs  subscriptions.rs
tests/common/: mod.rs
