[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[[bin]]
path = "src/health.rs"
name = "health"

[features]
default = []
fixtures = [
  "dep:rstest",
  "dep:tempfile",
  "dep:serde_yaml",
  "dep:futures",
  "dep:testcontainers",
]

[dependencies]
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.98"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Configuration
config = "0.15.11"
dotenvy = "0.15.7"

# Integration tests
rstest = { version = "0.25.0", optional = true }
tempfile = { version = "3.20.0", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
futures = { version = "0.3.31", optional = true }
testcontainers = { version = "0.24.0", features = [
  "blocking",
  "http_wait",
], optional = true }
thiserror = "2.0.12"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["blocking"] }

[dev-dependencies]
zero2prod = { path = ".", features = ["fixtures"] }
testcontainers = { version = "0.24.0", features = ["blocking", "http_wait"] }
rstest = "0.25.0"
tempfile = "3.20.0"
serde_yaml = "0.9.34"
futures = "0.3.31"
testcontainers-modules = "0.12.0"
