[workspace]
members = ["app", "serializer", "logs"]
resolver = "3"

[workspace.dependencies]
# Crates
app.path = "app"
logs.path = "logs"
serializer.path = "serializer"

# Web
actix-web = "4"
reqwest = { version = "0.12.15", features = ["blocking"] }

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
hex = "0.4.3"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Configuration
config = "0.15.11"
dotenvy = "0.15.7"

# Integration tests
rstest = "0.25.0"
tempfile = "3.20.0"
testcontainers = { version = "0.24.0", features = ["blocking", "http_wait"] }
testcontainers-modules = "0.12.0"
